# jiminny-mcp

./: .env.example  README.md  pyproject.toml  setup.sh
.cursor/rules/: setup.mdc
src/: server.py
