[project]
name = "jiminny-mcp"
version = "1.0.0"
description = "MCP server for Jiminny - extract sales call transcripts and summaries"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
